account sign in/up layout improvements in advance of MVA work

--- a/configuration/templates/account/auth/reset-password-admin.hbs
+++ b/configuration/templates/account/auth/reset-password-admin.hbs
@@ -1,6 +1,6 @@
 <form id="reset-password-form" method="POST" class="container form authentication-form" data-component="TasksTrigger" data-TasksTrigger="reset-password">
   <p class="l-margin r-margin">
-    Enter your Account email address to be sent a password reset link
+    Enter your Group Administrator account email address to be sent a password reset link
   </p>
   <div class="l-margin r-margin">
     <div id="password-reset-alert" class="alert hidden bg-error s-rounded x-padding v-margin">
