--- a/configuration/templates/account/auth/sign-in-admin.hbs
+++ b/configuration/templates/account/auth/sign-in-admin.hbs
@@ -29,7 +29,7 @@
           Sign in
         </button>
         <p class="v-margin-full">
-          Forgot your password? <a href="/reset-password">Reset password</a>
+          Forgot your password? <a href="/admin-reset-password">Reset password</a>
         </p>
         <p class="v-margin-full">
           Read our <a href="/privacy" target="_blank">privacy notice</a>
