--- a/configuration/templates/opportunities/opportunity-head-tags.hbs
+++ b/configuration/templates/opportunities/opportunity-head-tags.hbs
@@ -4,14 +4,14 @@
 <title>{{title}} with {{organisation_name}} – Saltire Awards</title>
 <meta property="og:title" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true">
 <meta itemprop="name" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true">
-<meta name="twitter:title" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true">
+{{!-- <meta name="twitter:title" content="{{title}} with {{organisation_name}} – Saltire Awards" data-dynamic="true"> --}}
 
 {{#ifAny organisation.logo_url og_image ../og_image ~}}
 <meta property="og:image" content="{{default organisation_logo_url og_image ../og_image}}" data-dynamic="true">
 <meta property="og:image:height" content="250">
 <meta property="og:image:width" content="250">
 <meta itemprop="image" content="{{default organisation_logo_url og_image ../og_image}}" data-dynamic="true">
-<meta name="twitter:image" content="{{default organisation_logo_url og_image ../og_image}}" data-dynamic="true">
+{{!-- <meta name="twitter:image" content="{{default organisation_logo_url og_image ../og_image}}" data-dynamic="true"> --}}
 {{/ifAny ~}}
 
 {{#ifAny og_summary description ../og_summary ../description ~}}
@@ -19,20 +19,20 @@
 <meta itemprop="description" content="{{stripTags (regexReplace (default description (default ../description (default og_summary ../og_summary))) '\r|\n' 'gi' '')}}" data-dynamic="true">
 <meta name="description" content="{{stripTags (regexReplace (default description (default ../description (default og_summary ../og_summary))) '\r|\n' 'gi' '')}}" data-dynamic="true">
 <meta property="og:description" content="{{stripTags (regexReplace (default description (default ../description (default og_summary ../og_summary))) '\r|\n' 'gi' '')}}" data-dynamic="true">
-<meta name="twitter:description" content="{{stripTags (regexReplace (default description (default ../description (default og_summary ../og_summary))) '\r|\n' 'gi' '')}}" data-dynamic="true">
+{{!-- <meta name="twitter:description" content="{{stripTags (regexReplace (default description (default ../description (default og_summary ../og_summary))) '\r|\n' 'gi' '')}}" data-dynamic="true"> --}}
 {{/ifAny ~}}
 
 <!-- Twitter Card data -->
-<meta name="twitter:card" content="summary" />
+{{!-- <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@scvotweet">
-<meta name="twitter:creator" content="@scvotweet">
+<meta name="twitter:creator" content="@scvotweet"> --}}
 <!-- Twitter summary card with large image must be at least 280x150px -->
 <!-- <meta name="twitter:image:src" content="http://www.example.com/image.jpg"> -->
 
 <!-- Open Graph data -->
 <meta property="og:type" content="website" />
 {{#if Id ~}}
-<meta property="og:url" content="https://search.volunteerscotland.net/opportunity/{{Id}}/{{title_slug}}&utm_source=saltire-awards&utm_campaign=search&utm_medium=website" />
+<meta property="og:url" content="https://volunteer.scot/search/{{Id}}/{{title_slug}}&utm_source=saltire-awards&utm_campaign=search&utm_medium=website" />
 {{/if ~}}
 <meta property="og:site_name" content="Saltire Awards" />
 
