remove twitter links

--- a/configuration/templates/pages/contact.hbs
+++ b/configuration/templates/pages/contact.hbs
@@ -44,9 +44,9 @@
           {{#if phone ~}}
           <a href="tel:+44{{replace phone ' ' ''}}" class="btn"><span class="fas fa-fw fa-phone fa-flip-horizontal"></span></a>
           {{/if ~}}
-          {{#if twitter ~}}
+          {{!-- {{#if twitter ~}}
           <a href="{{fixUrl twitter}}" class="btn"><span class="fab fa-fw fa-twitter"></span></a>
-          {{/if ~}}
+          {{/if ~}} --}}
           {{#if facebook ~}}
           <a href="{{fixUrl facebook}}" class="btn"><span class="fab fa-fw fa-facebook"></span></a>
           {{/if ~}}
