--- a/configuration/partials/opportunity/register-interest-faux-chip.hbs
+++ b/configuration/partials/opportunity/register-interest-faux-chip.hbs
@@ -4,7 +4,7 @@
   <span class="">I want to volunteer</span>
 </div>
 {{else}}
-<a href="https://search.volunteerscotland.net/register-interest/{{Id}}/{{title_slug}}?utm_source=saltire-awards&utm_campaign=search&utm_medium=website" class="chip chip--register-interest">
+<a href="https://volunteerscotland.local:4333/search/{{Id}}/{{title_slug}}?utm_source=saltire-awards&utm_campaign=search&utm_medium=website#modal_register_{{Id}}" class="chip chip--register-interest">
   {{!-- <span class="far fa-hand-paper" aria-hidden="true"></span> --}}
   <span class="noselect">I want to volunteer&ensp;</span>
   <span class="far fa-external-link" aria-hidden="true"></span>
