--- a/configuration/partials/local-contact-info.hbs
+++ b/configuration/partials/local-contact-info.hbs
@@ -16,10 +16,13 @@
   {{#if website}}Website: <a href="{{fixUrl website}}" target="_blank">{{replace (replace (replace website 'https://' '') 'http://' '') 'www.' ''}}</a>{{/if}}
 </p>
 <p>
-  {{#if twitter}}<a href="{{fixUrl twitter}}" target="_blank"><span class="fab fa-twitter fa-fw fa-2x"></span></a>{{/if}}
+  {{!-- {{#if twitter}}<a href="{{fixUrl twitter}}" target="_blank"><span class="fab fa-twitter fa-fw fa-2x"></span></a>{{/if}} --}}
   {{#if facebook}}<a href="{{fixUrl facebook}}" target="_blank"><span class="fab fa-facebook fa-fw fa-2x"></span></a>{{/if}}
   {{#if instagram}}<a href="{{fixUrl instagram}}" target="_blank"><span class="fab fa-instagram fa-fw fa-2x"></span></a>{{/if}}
   {{#if youtube}}<a href="{{fixUrl youtube}}" target="_blank"><span class="fab fa-youtube fa-fw fa-2x"></span></a>{{/if}}
+  {{#if mastodon}}<a href="{{fixUrl mastodon}}" target="_blank"><span class="fab fa-mastodon fa-fw fa-2x"></span></a>{{/if}}
+  {{#if threads}}<a href="{{fixUrl threads}}" target="_blank"><span class="fab fa-threads fa-fw fa-2x"></span></a>{{/if}}
+  {{#if tiktok}}<a href="{{fixUrl tiktok}}" target="_blank"><span class="fab fa-tiktok fa-fw fa-2x"></span></a>{{/if}}
 </p>
 {{/if ~}}
 {{/each ~}}
