--- a/src/main.scss
+++ b/src/main.scss
@@ -840,7 +840,7 @@ form {
   border: none;
   position: relative;
   display: block;
-  margin-bottom: $unit/2;
+  margin-bottom: $unit;
   width: 100%;
   color: white;
   font-weight: 600;
