--- a/configuration/templates/account/auth/sign-in.hbs
+++ b/configuration/templates/account/auth/sign-in.hbs
@@ -22,7 +22,7 @@
       </div>
       <div id="form-section-sign-in-buttons" class="t-margin">
         <div class="">
-          <button class="btn btn-primary" type="submit" id="sign-in-submit" data-component="TasksTrigger" data-TasksTrigger="sign-in" data-provider-id="password">
+          <button class="btn btn-primary btn-lg" type="submit" id="sign-in-submit" data-component="TasksTrigger" data-TasksTrigger="sign-in" data-provider-id="password">
             Sign in
           </button>
         </div>
