--- a/configuration/templates/account/auth/sign-up.hbs
+++ b/configuration/templates/account/auth/sign-up.hbs
@@ -29,7 +29,7 @@
       </div>
       <div id="form-section-sign-up-buttons" class="t-margin">
         <div class="b-padding-full">
-          <button class="btn btn-primary" type="submit" id="sign-up-submit" >
+          <button class="btn btn-primary btn-lg" type="submit" id="sign-up-submit" >
             Sign up
           </button>
         </div>
